Set up theme and navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div [ngClass]="theme | async" class="app">
-  <button (click)="toggleTheme()">Toggle</button>
+  <app-navbar></app-navbar>
   <router-outlet></router-outlet>
 </div>
