--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,18 +2,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
 
 :root {
-  --d-element: hsl(209, 23%, 22%);
-  --d-bg: hsl(207, 26%, 17%);
-  --d-text: var(var(--white));
+  --white: hsl(0, 0%, 100%);
 
+  --d-bg: hsl(207, 26%, 17%);
+  --d-element: hsl(209, 23%, 22%);
+  --d-text: var(--white);
+
+  --l-bg: hsl(0, 0%, 98%);
+  --l-element: var(--white);
   --l-text: hsl(200, 15%, 8%);
   --l-input: hsl(0, 0%, 52%);
-  --l-bg: hsl(0, 0%, 98%);
-  --white: hsl(0, 0%, 100%);
-  --l-element: var(--white);
 }
 
 * {
   margin: 0;
   padding: 0;
+}
+
+body {
+  font-family: 'Nunito Sans', sans-serif;
+}
+
+.shadow {
+  box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.1);
 }
