Added the get request for all countries and added the countries components

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="shadow">
   <h2>Where in the world?</h2>
   <div (click)="toggleTheme()">
-    <span class="class fa fa-moon-o"></span>
+    <span class="fas fa-moon"></span>
     {{" "}}
     <span>Dark Mode</span>
   </div>
