--- a/src/app/pages/homes/homes.component.html
+++ b/src/app/pages/homes/homes.component.html
@@ -1,4 +1,10 @@
-<div>
-  <app-country-card *ngFor="let country of countries" [country]="country">
-  </app-country-card>
+<div class="container">
+  <div class="search-filter">
+    <span class="fa fa-search"></span>
+    <input type="text" placeholder="Search for a country..." />
+  </div>
+  <div class=" d-flex justify-content-around align-items-start flex-wrap">
+    <app-country-card *ngFor="let country of countries" [country]="country">
+    </app-country-card>
+  </div>
 </div>
