--- a/src/app/components/country-card/country-card.component.html
+++ b/src/app/components/country-card/country-card.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <img class="card-img-top" [src]="country.flags.png" alt="Card image cap">
   <div class="card-body">
-    <h5 class="card-title">{{country.name.common}}</h5>
+    <h5 class="card-title">{{country.name.official}}</h5>
     <p><b>Capital:</b> {{country.capital}}</p>
     <p><b>Population:</b> {{country.population}}</p>
 
