--- a/src/app/pages/homes/homes.component.html
+++ b/src/app/pages/homes/homes.component.html
@@ -1,7 +1,13 @@
 <div class="container">
-  <div class="search-filter">
-    <span class="fa fa-search"></span>
-    <input type="text" placeholder="Search for a country..." [(ngModel)]="searchedCountry" />
+  <div class="container filter-section d-flex justify-content-between align-items-center flex-wrap">
+    <div class="search-filter">
+      <span class="fa fa-search"></span>
+      <input type="text" placeholder="Search for a country..." [(ngModel)]="searchedCountry" />
+    </div>
+    <div class="dropdown-region">
+      <app-dropdown-region></app-dropdown-region>
+    </div>
+
   </div>
   <div class=" d-flex justify-content-around align-items-start flex-wrap">
     <app-country-card *ngFor="let country of countries" [country]="country">
