added the filter of countries by region functionnality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="theme | async" class="app">
+<div class="app">
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
 </div>
