--- a/src/app/components/country-card/country-card.component.html
+++ b/src/app/components/country-card/country-card.component.html
@@ -5,6 +5,6 @@
     <p><b>Capital:</b> {{country.capital}}</p>
     <p><b>Population:</b> {{country.population}}</p>
 
-    <a href="#" class="btn btn-dark mt-3">More detail</a>
+    <!-- <a href="#" class="btn btn-dark mt-3">More detail</a> -->
   </div>
 </div>
