--- a/src/app/components/dropdown-region/dropdown-region.component.html
+++ b/src/app/components/dropdown-region/dropdown-region.component.html
@@ -1,3 +1,3 @@
-<select class="form-select" aria-label="Default select example" (change)="afficher($event)">
+<select class="form-select" aria-label="Default select example" (change)="sendSelectedRegion($event)">
   <option *ngFor="let region of listOfRegions" [value]="region">{{region}}</option>
 </select>
